# benchrc

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  flake.nix  generate_datasets.py  run_benchmarks.py
benches/: benchmarks.rs  bfs.rs  histogram.rs  mergesort.rs  rayon_overhead.rs  stencil.rs
benches/common/: mod.rs
cpp/: CMakeLists.txt  Makefile  algorithms.hpp  common.hpp
cpp/benchmarks/: bfs.cpp  common.hpp  google_benchmarks.cpp  histogram.cpp  mergesort.cpp  stencil.cpp
cpp/bfs/: openmp.cpp  taskflow.cpp
cpp/histogram/: openmp.cpp  taskflow.cpp
cpp/mergesort/: openmp.cpp  taskflow.cpp
cpp/stencil/: openmp.cpp  taskflow.cpp
graphs/: small.graph
plots/: REPORT.md
plots/raw/: cpp_bfs.txt  cpp_bfs_unoptimized.txt  cpp_histogram.txt  cpp_mergesort.txt  cpp_stencil.txt  rust_bfs.txt  rust_bfs_unoptimized.txt  rust_histogram.txt  rust_mergesort.txt  rust_rayon_overhead.txt  rust_stencil.txt
scripts/: generate_datasets.py  plot_benchmarks.py  run_benchmarks.sh
src/: main.rs
src/benchmarks/: common.rs  mod.rs
src/benchmarks/bfs/: rayon.rs  sequential.rs
src/benchmarks/histogram/: rayon.rs  sequential.rs
src/benchmarks/mergesort/: mod.rs  rayon.rs  sequential.rs
src/benchmarks/stencil/: rayon.rs  sequential.rs
