[package]
name = "seminar"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.12"
rand = "0.10"
rand_distr = "0.6"

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "rayon_overhead"
harness = false

[[bench]]
name = "benchmarks"
harness = false
