[package]
name = "benchrc"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.12"

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "rayon_overhead"
harness = false

[[bench]]
name = "histogram"
harness = false

[[bench]]
name = "mergesort"
harness = false

[[bench]]
name = "stencil"
harness = false

[[bench]]
name = "bfs"
harness = false
